add exceptions